production/mihomo/resources/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: mihomo
  labels:
    app: mihomo
spec:
  selector:
    matchLabels:
      app: mihomo
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mihomo
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      terminationGracePeriodSeconds: 30
      containers:
      - name: mihomo
        image: hub.docker.com/metacubex/mihomo:Alpha
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 0
          runAsGroup: 0
          capabilities:
            add:
            - NET_ADMIN
            - NET_BIND_SERVICE
        ports:
        - name: tproxy-tcp
          containerPort: 7892
          hostPort: 7892
          protocol: TCP
        - name: tproxy-udp
          containerPort: 7892
          hostPort: 7892
          protocol: UDP
        - name: dns-tcp
          containerPort: 1053
          hostPort: 1053
          protocol: TCP
        - name: dns-udp
          containerPort: 1053
          hostPort: 1053
          protocol: UDP
        - name: controller
          containerPort: 9090
          hostPort: 9090
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 9090
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 9090
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 512Mi
        volumeMounts:
        - name: mihomo-state
          mountPath: /root/.config/mihomo
        - name: mihomo-config
          mountPath: /root/.config/mihomo/config.yaml
          subPath: config.yaml
      volumes:
      - name: mihomo-state
        hostPath:
          path: /var/lib/mihomo
          type: DirectoryOrCreate
      - name: mihomo-config
        secret:
          secretName: mihomo-config
