production/mihomo/resources/metacubexd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metacubexd
  namespace: mihomo
spec:
  selector:
    app.kubernetes.io/name: mihomo
  ports:
  - name: http
    port: 80
    targetPort: ui
