production/mihomo/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mihomo-api
  labels:
    app.kubernetes.io/name: mihomo
spec:
  selector:
    app.kubernetes.io/name: mihomo
  ports:
    - name: api
      port: 9090
      targetPort: api
